@@ -222,6 +222,7 @@ if test "x$enable_prpls" = "xyes" ; then
 	dnl checks for icqlib
 	AC_CHECK_HEADERS(asm/byteorder.h byteswap.h endian.h machine/endian.h arpa/nameser_compat.h)
 	AC_CHECK_FUNCS(bswap_32 bswap_16)
+	AC_C_BIGENDIAN
 
 	dnl checks for jabber
 	dnl AC_CHECK_SIZEOF(short)
